--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,9 @@ jobs:
           repository: ${{ env.DESTINATION_OWNER }}/${{ env.DESTINATION_REPO }}
           token: ${{ secrets.GITHUB_TOKEN }}
       
+      - name: List repository contents
+        run: ls -la
+      
       - name: List source directory contents
         run: ls -la ${{ env.SOURCE_DIRECTORY }}
 
