--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
       
       - name: List repository contents
         run: ls -la
+        run: cat README.md
       
       - name: List source directory contents
         run: ls -la ${{ env.SOURCE_DIRECTORY }}
