--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,8 @@ jobs:
       
       - name: List repository contents
         run: ls -la
+      
+      - name: cat readme contents
         run: cat README.md
       
       - name: List source directory contents
