--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 env:
   DESTINATION_OWNER: piyushanand3
   DESTINATION_REPO: copy-repo-to-this
-  SOURCE_DIRECTORY: copy-file-from-1
+  SOURCE_DIRECTORY: /home/runner/work/copy-file-from-1/copy-file-from-1
   DESTINATION_DIRECTORY: copy-repo-to-this
 
 jobs:
