--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,8 @@ jobs:
         uses: actions/checkout@v3
       - name: List repository contents
         run: ls -la && pwd
-      - name: List source directory contents
-        run: ls -la ${{ env.SOURCE_DIRECTORY }}
+      # - name: List source directory contents
+      #   run: ls -la ${{ env.SOURCE_DIRECTORY }}
 
       - name: Checkout destination repository
         uses: actions/checkout@v3
@@ -32,8 +32,8 @@ jobs:
       - name: List repository contents
         run: ls -la && pwd
 
-      - name: List destination directory contents
-        run: ls -la ${{ env.DESTINATION_DIRECTORY }}
+      # - name: List destination directory contents
+      #   run: ls -la ${{ env.DESTINATION_DIRECTORY }}
       
       - name: Copy files
         run: |
