--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ env:
   DESTINATION_OWNER: piyushanand3
   DESTINATION_REPO: copy-repo-to-this
   SOURCE_DIRECTORY: /home/runner/work/copy-file-from-1/copy-file-from-1
-  DESTINATION_DIRECTORY: /home/runner/work/copy-file-from-1/copy-file-from-1
+  DESTINATION_DIRECTORY: copy-repo-to-this 
 
 jobs:
   copy_files:
@@ -29,7 +29,7 @@ jobs:
           repository: ${{ env.DESTINATION_OWNER }}/${{ env.DESTINATION_REPO }}
           token: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: List repository contents
+      - name: List destination repository contents
         run: ls -la && pwd
 
       # - name: List destination directory contents
